kubernetes/dbdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solo-leveling-db
  namespace: sololeveling
spec:
  replicas: 1
  selector:
    matchLabels:
      project: sololeveling-db
  
  template:
    metadata:
      labels:
        project: sololeveling-db

    spec:
      containers:
      - name: mysqldb
        image: schd1337/portfoliodb:v4
---
# service for this db
apiVersion: v1
kind: Service
metadata:
  name: solo-leveling-db-service
  namespace: sololeveling
spec:
  type: ClusterIP 
  selector:
    project: sololeveling-db
  ports:
  - protocol: "TCP"
    # Port accessible inside cluster
    port: 3306
