kubernetes/mystatic-site.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mystatic-site
  namespace: static
spec:
  replicas: 2
  selector:
    matchLabels:
      app: portfolio
  
  template:
    metadata:
      labels:
        app: portfolio

    spec:
      containers:
      - name: flask
        image: schd1337/mywebsite:latest
        ports:
        - containerPort: 80   
---

# service for this app
apiVersion: v1
kind: Service
metadata:
  name: mystatic-site-service
  namespace: static
spec:
  type: ClusterIP
  selector:
    app: portfolio
  ports:
  - protocol: "TCP"
    # Port accessible inside cluster
    port: 9000
    # Port inside the container
    targetPort: 80
