kubernetes/project-upskill.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solo-leveling
  namespace: sololeveling
spec:
  replicas: 2
  selector:
    matchLabels:
      project: sololeveling
  
  template:
    metadata:
      labels:
        project: sololeveling

    spec:
      containers:
      - name: crow-app
        image: schd1337/portfolioapp:latest
        ports:
        - containerPort: 80
---

# service for this app
apiVersion: v1
kind: Service
metadata:
  name: solo-leveling-service
  namespace: sololeveling
spec:
  type: ClusterIP
  selector:
    project: sololeveling
  ports:
  - protocol: "TCP"
    # Port accessible inside cluster
    port: 8000
    # Port inside the container
    targetPort: 80
