kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  namespace: sololeveling 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: solo-leveling-service
              port:
                number: 80
#        - path: /
#          pathType: Prefix
#          backend:
#            service:
#              name: my-website
#              port:
#                number: 80
